--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace = "fr.thomas.maugin.flutter_play_licensing.flutter_play_licensing"
     compileSdkVersion 31
 
     compileOptions {
